<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_login"
    android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:src="@drawable/pt_logo"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:gravity="center"
        android:fontFamily="@font/segoe_ui_light"
        android:textSize="45sp"
        android:textAllCaps="true"
        android:textColor="#707070"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_username"
        android:layout_gravity="center"
        android:textColor="#707070"
        android:textColorHint="#707070"
        android:textColorHighlight="#707070"
        android:fontFamily="@font/segoe_ui_light"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/pt_icon_person"
        android:drawableTint="#707070"
        android:drawablePadding="5dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:layout_gravity="center"
        android:textColor="#707070"
        android:textColorHint="#707070"
        android:textColorHighlight="#707070"
        android:fontFamily="@font/segoe_ui_light"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/pt_icon_lock"
        android:drawableTint="#707070"
        android:drawablePadding="5dp"
        android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/segoe_ui_light"
        android:textAlignment="center"
        android:layout_marginBottom="70dp"
        android:paddingBottom="5dp"
        />

    <TextView
        android:id="@+id/tvDirectToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:fontFamily="@font/segoe_ui_regular"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:textColor="#FFFF"
        android:textSize="15sp" />

</LinearLayout>