<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_login"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="37dp"
            android:layout_height="44.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pt_back_arrow" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/pt_logo"
            android:contentDescription="@string/app_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_header"
        android:gravity="center"
        android:fontFamily="@font/segoe_ui_light"
        android:textSize="45sp"
        android:textAllCaps="true"
        android:textColor="#707070"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="-40dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFullName"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/register_full_name"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textColorHighlight="#707070"
            android:fontFamily="@font/segoe_ui_light"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_gravity="center" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        android:textColorHint="@color/colorPrimaryDark"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email"
            android:textColor="#707070"
            android:textColorHint="#707070"
            android:textColorHighlight="#707070"
            android:fontFamily="@font/segoe_ui_light"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_gravity="center" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:layout_gravity="center"
            android:textColor="#707070"
            android:textColorHighlight="#707070"
            android:fontFamily="@font/segoe_ui_light"
            android:backgroundTint="@color/colorPrimaryDark"
            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/register_conf_password"
            android:layout_gravity="center"
            android:textColor="#707070"
            android:textColorHighlight="#707070"
            android:fontFamily="@font/segoe_ui_light"
            android:backgroundTint="@color/colorPrimaryDark" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_login"
        android:shadowColor="#A8A8A8"
        android:fontFamily="@font/segoe_ui_light"
        android:textAlignment="center"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/tvTermsOfService"
        android:layout_gravity="center"
        android:layout_width="213dp"
        android:layout_height="100dp"
        android:text="@string/register_terms_agreement"
        android:textColor="#FFFF"
        android:textSize="12sp"
        android:textDirection="ltr"
        android:layout_marginTop="15dp"/>

</LinearLayout>