<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/upper_home_gradient"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pt_icon_menu"
        android:tint="#FFF"
        android:paddingTop="20dp"
        android:scaleType="fitStart"
        android:paddingStart="20dp"/>

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-35dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFF"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/btnDebts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_menu_btn_1"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarStyle"
            android:textColor="#FFF"
            android:fontFamily="@font/segoe_ui_light"
            android:textSize="25sp"
            android:drawableTint="#FFFF" />

        <View
            android:id="@+id/vLineSeparator"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:background="#FFF"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"/>

        <Button
            android:id="@+id/btnDebits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_menu_btn_2"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarStyle"
            android:textColor="#FFF"
            android:fontFamily="@font/segoe_ui_light"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>