<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddDebitActivity"
    android:background="#FFF"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/ivAddDebitBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/pt_back_arrow"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:tint="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/ivAddDebitLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/pt_logo"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddDebit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_debit_header"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/segoe_ui_light"
            android:textSize="35sp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="-10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddDebitName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            android:textColorHint="@color/colorPrimaryDark"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAddDebitName"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/add_debit_name"
                android:textColorHint="@color/colorPrimary"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/segoe_ui_light"
                android:textSize="20sp"
                android:drawableLeft="@drawable/pt_icon_search"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:backgroundTint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddDebitContact"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            android:textColorHint="@color/colorPrimaryDark"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            android:layout_marginTop="-10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAddDebitContact"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/add_debit_contact"
                android:textColorHint="@color/colorPrimary"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/segoe_ui_light"
                android:textSize="20sp"
                android:drawableLeft="@drawable/pt_icon_contact"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:backgroundTint="@color/colorPrimary" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddDebitDeadline"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true"
            android:textColorHint="@color/colorPrimaryDark"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            android:layout_marginTop="-10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAddDebitDeadline"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/add_debit_date"
                android:textColorHint="@color/colorPrimary"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/segoe_ui_light"
                android:textSize="20sp"
                android:drawableLeft="@drawable/pt_icon_date"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAddDebitPicture"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/add_debit_image"
            android:drawableLeft="@drawable/pt_icon_camera"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:src="@drawable/pt_icon_add"
            android:backgroundTint="#FFF"
            android:tint="@color/colorPrimary"
            android:fontFamily="@font/segoe_ui_regular"
            android:textColor="@color/colorPrimary"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddDebitSum"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:errorEnabled="true"
            android:textColorHint="@color/colorPrimaryDark"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAddDebitSum"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/add_debit_sum"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/segoe_ui_light"
                android:textSize="20sp"
                android:drawableLeft="@drawable/pt_icon_money"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:backgroundTint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAddDebit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/add_debit_add_btn"
            android:background="@drawable/btn_add_debit"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/segoe_ui_light"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textAllCaps="false"
            />


    </LinearLayout>

</LinearLayout>